[workspace]
resolver = "2"
members = ["crates/lucretia_compiler", "crates/lucretia_driver"]

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["AndreRojasMartinsson"]
license = "CC-BY-NC-SA-4.0"
keywords = ["lua", "typing", "programming", "language"]

[workspace.dependencies]
# Internal dependencies
lucretia_compiler = { path = "crates/lucretia_compiler" }

# External dependencies
log = "0.4.27"
thiserror = "2.0.12"
