[package]
name = "lucretia_driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
autobins = false

[[bin]]
name = "lucretiac"
path = "src/main.rs"

[dependencies]
lucretia_compiler.workspace = true
anyhow = "1.0.98"
env_logger = "0.11.8"
log.workspace = true
clap = { version = "4.5.38", features = [
  "cargo",
  "derive",
  "env",
  "unicode",
  "wrap_help",
] }
clap-verbosity-flag = "3.0.2"
shadow-rs = { version = "1.1.1", features = ["metadata"] }

[build-dependencies]
shadow-rs = "1.1.1"
